<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuFragment">


    <ImageView
        android:id="@+id/im_agregar_cliente"
        android:layout_width="125dp"
        android:layout_height="118dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/iconopersona"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_agregar_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/agregar_cliente"
        app:layout_constraintEnd_toStartOf="@id/tv_agregar_vehiculo"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_agregar_cliente" />

    <TextView
        android:id="@+id/tv_agregar_vehiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="56dp"
        android:text="@string/agregar_vehiculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_agregar_vehiculo" />

    <ImageView
        android:id="@+id/im_agregar_repuesto"
        android:layout_width="132dp"
        android:layout_height="113dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/repuestos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_agregar_cliente" />

    <TextView
        android:id="@+id/tv_agregar_repuesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:layout_marginEnd="260dp"
        android:text="@string/agregar_repuesto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_agregar_repuesto" />

    <ImageView
        android:id="@+id/im_agregar_reparacion"
        android:layout_width="132dp"
        android:layout_height="108dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/iconos_reparacion"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/im_agregar_repuesto"
        app:layout_constraintTop_toBottomOf="@+id/tv_agregar_vehiculo" />

    <TextView
        android:id="@+id/tv_agregar_reparacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:layout_marginEnd="44dp"
        android:text="@string/agregar_reparacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toEndOf="@+id/tv_agregar_repuesto"
        app:layout_constraintTop_toBottomOf="@+id/im_agregar_reparacion" />

    <ImageView
        android:id="@+id/im_agregar_vehiculo"
        android:layout_width="142dp"
        android:layout_height="121dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/auto_icono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toEndOf="@+id/im_agregar_cliente"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_imprimir_factura"
        android:layout_width="134dp"
        android:layout_height="123dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/icono_ticket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_agregar_repuesto" />

    <TextView
        android:id="@+id/tv_imprimir_factura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:text="@string/imprimir_factura"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_imprimir_factura" />

</androidx.constraintlayout.widget.ConstraintLayout>